tests/invalid/ref_requires_addressable_operand.wio
fn Entry(args: string[]) -> i32 {
    let bad = ref (1 + 2);
    return 0;
}
